tests/NormalTests/paczka1/fuzzy1/19759147.err
Error in line 2: WieE A249 56,7
Error in line 12: ThE5qZ7lxGI A645 27,9
Error in line 8: WieE A616 13,9
Error in line 22: A0RXMreeao A836 6,8
Error in line 27: A0RXMreeao A249 39,7
Error in line 26: 6XLIu9UL4 A616 50,4
Error in line 36: WU6dA A616 118,1
